# cpp-docker-dev-env

./: .gitignore  README.md
app/: CMakeLists.txt  app.code-workspace  main.cpp  test_widget.cpp  test_widget.h
env/: qtcreator.sh
env/build-env/: Dockerfile
env/dev-env/: Dockerfile
shared-space/: example.txt
